# ImPlay

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
source/: main.cpp  player.cpp  window.cpp
vs2022/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
vs2022/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
vs2022/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog
vs2022/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
vs2022/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
vs2022/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
